Hot fix position jump on mobile

--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -58,7 +58,7 @@
 
 .bottom-sheet {
   position: fixed;
-  top: var(--s-medium);
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -100,10 +100,12 @@
 
 @keyframes toast-enter {
   0% {
+    opacity: 0.75;
     transform: translateY(100%);
   }
 
   100% {
+    opacity: 1;
     transform: translateY(0%);
   }
 }
